# wetwire-github-python

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: build-attestation-example.yaml  ci.yml
codegen/: fetch.py  generate.py  parse.py
docs/: ADOPTION.md  CLI.md  CODEGEN.md  COMPOSITE_ACTIONS.md  DEVELOPERS.md  EXAMPLES.md  EXPRESSIONS.md  FAQ.md  FAQ_ADVANCED.md  GITHUB-KIRO-CLI.md  IMPORT_WORKFLOW.md  INTERNALS.md  LINT_RULES.md  MCP_SERVER.md  PLAN.md  QUICK_START.md  REPOSITORY_CONFIG.md  ROADMAP.md  TROUBLESHOOTING.md  TROUBLESHOOTING_ADVANCED.md  VALIDATION.md  VERSIONING.md  WORKFLOW_RECIPES.md
examples/: __init__.py  attestation_example.py  branch_protection_example.py  composite_action_example.py  repository_settings_example.py  secret_scanning_example.py
scripts/: README.md  build.sh  dev-setup.sh  lint.sh  test.sh  typecheck.sh
src/wetwire_github/: __init__.py  contracts.py  graph.py  loader.py  mcp_server.py  provider.py  pseudo.py
src/wetwire_github/actions/: __init__.py  attest_build_provenance.py  cache.py  (+28 more)
tests/: conftest.py  test_action_metadata.py  test_attestation_actions.py  test_autofix_expansion.py  test_branch_protection.py  test_build_command.py  test_caching_strategies.py  test_cli.py  test_cli_path_validation.py  test_composite_actions.py  test_composition.py  test_conftest_fixtures.py  test_context_helpers.py  test_contracts.py  test_core_integration.py  test_cost.py  test_cost_command.py  test_create_github_app_token.py  test_dependabot.py  test_dependency_review.py  test_design_command.py  test_discover.py  test_discovery_cache.py  test_discussion_templates.py  test_event_context.py  test_expanded_actions.py  test_expression_functions.py  test_expressions.py  test_expressions_documentation.py  test_extraction_rules.py  test_fetch.py  test_first_interaction.py  test_fixture_usage_example.py  test_generate.py  test_gh_pages.py  test_graph.py  test_graph_command.py  test_graph_visualization.py  test_import_command.py  test_importer.py  (+49 more)
(+105 files in other folders)
