[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wetwire-github"
version = "0.1.0"
description = "GitHub integration for wetwire"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Alex Artigues", email = "albert.a.artigues@gmail.com" }
]
keywords = ["github", "wetwire", "automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "wetwire-core",
    "dataclass-dsl>=1.0.1",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "ty>=0.0.1a0",
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.1",
]

[dependency-groups]
dev = [
    "ty>=0.0.1a0",
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.1",
]

[project.scripts]
wetwire-github = "wetwire_github.cli:main"

[project.urls]
Homepage = "https://github.com/lex00/wetwire-github-python"
Documentation = "https://github.com/lex00/wetwire-github-python#readme"
Repository = "https://github.com/lex00/wetwire-github-python"
Issues = "https://github.com/lex00/wetwire-github-python/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/wetwire_github"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=wetwire_github --cov-report=term-missing"
pythonpath = ["src"]

[tool.coverage.run]
source = ["src/wetwire_github"]
omit = ["*/tests/*"]
